<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_gradient"
    android:padding="32dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/tvLoginSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_login"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/etPseudo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/hint_pseudo"
        android:textColorHint="@color/gray_text"
        android:textColor="@color/white"
        android:background="@drawable/box"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:inputType="text"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/accent_pro"
        app:layout_constraintTop_toBottomOf="@id/etPseudo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_password"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/box"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/box"
        android:backgroundTint="@color/accent_pro"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_account"
        android:textColor="@color/accent_pro"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>